Add background color to body

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Tailwindcss Practice</title>
     <link rel="stylesheet" href="output.css">
 </head>
-<body class="h-screen flex items-center justify-center">
+<body class="h-screen flex items-center justify-center bg-gray-100">
      <div>
         <img src="images/profile-pic.jpg" alt="">
         <div>
