--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="output.css">
 </head>
 <body class="h-screen flex items-center justify-center bg-gray-100">
-     <div>
+     <div class="max-w-sm">
         <img src="images/profile-pic.jpg" alt="">
         <div>
             Nazma Sarker
