--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="h-screen flex items-center justify-center bg-gray-100">
      <div class="max-w-sm mx-auto p-8 bg-white rounded-xl shadow-md">
-        <img src="images/profile-pic.jpg" alt="">
+        <img class="h-24 mx-auto rounded-full ring-4" src="images/profile-pic.jpg" alt="">
         <div>
             Nazma Sarker
         </div>
