Add text center class and p tag

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 <body class="h-screen flex items-center justify-center bg-gray-100">
      <div class="max-w-sm mx-auto p-8 bg-white rounded-xl shadow-md">
         <img class="h-24 w-24 object-cover mx-auto rounded-full ring-4 ring-green-400" src="images/profile-pic.jpg" alt="">
-        <div>
-            Nazma Sarker
+        <div class="text-center">
+   
+            <p>Nazma Sarker</p> 
+            <p>Software Engineer</p>   
+       
+            <button>contact me</button>
         </div>
-        <div>
-            Software Engineer
-        </div>
-        <button>contact me</button>
+
      </div>
 </body>
 </html>
