--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
      <div class="max-w-sm mx-auto p-8 bg-white rounded-xl shadow-md">
         <img class="h-24 w-24 object-cover mx-auto rounded-full ring-4 ring-green-400" src="images/profile-pic.jpg" alt="">
         <div class="text-center">
-   
-            <p>Nazma Sarker</p> 
-            <p>Software Engineer</p>   
-       
+            <div>
+                <p class="text-lg">Nazma Sarker</p> 
+                <p>Software Engineer</p>   
+            </div>
             <button>contact me</button>
         </div>
 
