--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img class="h-24 w-24 object-cover mx-auto rounded-full ring-4 ring-green-400" src="images/profile-pic.jpg" alt="">
         <div class="text-center">
             <div>
-                <p class="text-lg">Nazma Sarker</p> 
+                <p class="text-lg text-black font-semibold">Nazma Sarker</p> 
                 <p>Software Engineer</p>   
             </div>
             <button>contact me</button>
