Add text color and weight

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="text-center">
             <div>
                 <p class="text-lg text-black font-semibold">Nazma Sarker</p> 
-                <p>Software Engineer</p>   
+                <p class="text-gray-500 font-medium">Software Engineer</p>   
             </div>
             <button>contact me</button>
         </div>
