--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
                 <p class="text-lg text-black font-semibold">Nazma Sarker</p> 
                 <p class="text-gray-500 font-medium">Software Engineer</p>   
             </div>
-            <button class="px-4 py-1 border border-purple-300 rounded-full text-sm">Contact me</button>
+            <button class="px-4 py-1 border border-purple-300 
+            rounded-full text-sm text-purple-600 font-semibold">Contact me</button>
         </div>
 
      </div>
