--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="output.css">
 </head>
 <body class="h-screen flex items-center justify-center bg-gray-100">
-     <div class="max-w-sm mx-auto p-8 bg-white rounded-xl shadow-md">
+     <div class="max-w-sm mx-auto p-8 bg-white rounded-xl shadow-md space-y-4">
         <img class="h-24 w-24 object-cover mx-auto rounded-full ring-4 ring-green-400" src="images/profile-pic.jpg" alt="">
-        <div class="text-center">
+        <div class="text-center space-y-3">
             <div>
                 <p class="text-lg text-black font-semibold">Nazma Sarker</p> 
                 <p class="text-gray-500 font-medium">Software Engineer</p>   
