--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <div class="max-w-sm mx-auto p-8 bg-white rounded-xl shadow-md space-y-4">
         <img class="h-24 w-24 object-cover mx-auto rounded-full ring-4 ring-green-400" src="images/profile-pic.jpg" alt="">
         <div class="text-center space-y-3">
-            <div>
+            <div class="space-y-0.5">
                 <p class="text-lg text-black font-semibold">Nazma Sarker</p> 
                 <p class="text-gray-500 font-medium">Software Engineer</p>   
             </div>
