--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="output.css">
 </head>
 <body class="h-screen flex items-center justify-center bg-gray-100">
-     <div class="max-w-sm mx-auto p-8 bg-white rounded-xl shadow-md space-y-4">
+     <div class="max-w-sm mx-auto p-8 bg-white rounded-xl shadow-md space-y-4 sm:flex">
         <img class="h-24 w-24 object-cover mx-auto rounded-full ring-4 ring-green-400" src="images/profile-pic.jpg" alt="">
         <div class="text-center space-y-3">
             <div class="space-y-0.5">
