--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body class="h-screen flex items-center justify-center bg-gray-100">
      <div class="max-w-sm mx-auto p-8 bg-white rounded-xl shadow-md 
      space-y-4 sm:flex sm:space-y-0 sm:items-center sm:space-x-6 sm:py-4">
-        <img class="h-24 w-24 object-cover mx-auto rounded-full ring-4 ring-green-400" src="images/profile-pic.jpg" alt="">
-        <div class="text-center space-y-3">
+        <img class="h-24 w-24 object-cover mx-auto rounded-full ring-4 ring-green-400 sm:flex-shrink-0" src="images/profile-pic.jpg" alt="">
+        <div class="text-center space-y-3 sm:text-left">
             <div class="space-y-0.5">
                 <p class="text-lg text-black font-semibold">Nazma Sarker</p> 
                 <p class="text-gray-500 font-medium">Software Engineer</p>   
